# SPDX-FileCopyrightText: 2023 DESY and the Constellation authors
# SPDX-License-Identifier: CC0-1.0

option('impl_cxx', type: 'feature', value: 'enabled', description: 'Build C++ implementation')
option('impl_py', type: 'feature', value: 'auto', description: 'Build Python implementation')

option('cxx_tools', type: 'boolean', value: true, description: 'Build C++ tools')
option('cxx_tests', type: 'feature', value: 'auto', description: 'Build C++ tests')

# GUI framework version:
option('qt_version', type : 'combo', choices : ['qt5', 'qt6'], value : 'qt6')

# Satellite features - check code/manual if build by default
option('satellite_dev_null_receiver', type: 'feature', value: 'auto', description: 'Build DevNullReceiver satellite')
option('satellite_random_transmitter', type: 'feature', value: 'auto', description: 'Build RandomTransmitter satellite')
option('satellite_sputnik', type: 'feature', value: 'auto', description: 'Build Sputnik satellite')
