# SPDX-FileCopyrightText: 2024 DESY and the Constellation authors
# SPDX-License-Identifier: CC0-1.0

[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "constellation"
authors = [{name = "Constellation Authors"}]
description = "Constellation SCADA System"
readme = "README.md"
keywords = ["DAQ", "SCADA", "experimental control"]
license = {text = "EUPL-1.2"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: Unix",
    "License :: OSI Approved",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "zmq",
    "msgpack",
    "python-statemachine",
    "h5py",
    "numpy",
]

[project.scripts]
Satellite = "constellation.satellite:main"

[project.urls]
Homepage = "https://constellation.pages.desy.de/"
Repository = "https://gitlab.desy.de/constellation/constellation"

[project.optional-dependencies]
dev = ["build", "black", "flake8", "flake8-pyproject"]
docs = ["sphinx", "myst-parser", "pydata_sphinx_theme", "ablog", "sphinxcontrib.plantuml"]
test = ["pytest", "pytest-forked", "pytest-cov", "pytest-sugar"]

[tool.meson-python.args]
setup = ["--wrap-mode=forcefallback", "-Dimpl_py=enabled", "-Dimpl_cpp=disabled"]  # disable C++ for now
dist = ["--include-subprojects"]

[tool.flake8]
max-line-length = 125
ignore = ["E203", "W503"]

[tool.coverage.run]
source = ["constellation"]
