# SPDX-FileCopyrightText: 2024 DESY and the Constellation authors
# SPDX-License-Identifier: CC0-1.0

[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "constellation"
authors = [{name = "Constellation Authors"}]
description = "Constellation SCADA System"
readme = "README.md"
keywords = ["DAQ", "SCADA", "experimental control"]
license = {text = "EUPL-1.2"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: Unix",
    "License :: OSI Approved",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pyzmq",
    "msgpack",
    "python-statemachine",
    "numpy",
    "coloredlogs",
    "psutil",
]

[project.scripts]
Controller = "constellation.core.controller:main"
Monitor = "constellation.core.monitoring:main"
DataReceiver = "constellation.core.datareceiver:main"
DemoSatellite = "constellation.core.satellite:main"
DemoDataSender = "constellation.core.datasender:main"
DemoHeartbeatChecker = "constellation.core.heartbeatchecker:main"
DemoHeartbeatSender = "constellation.core.heartbeater:main"
# tools
ConstellationListInterfaces = "constellation.tools.list_interfaces:main"
# 3rd-party Satellites
SatelliteCaenHv = "constellation.satellites.caenhv.caenhv:main"

[project.urls]
Homepage = "https://constellation.pages.desy.de/"
Repository = "https://gitlab.desy.de/constellation/constellation"

[project.optional-dependencies]
dev = ["build", "black", "flake8", "flake8-pyproject", "mypy"]
test = ["pytest", "pytest-forked", "pytest-cov", "pytest-sugar"]
docs = ["sphinx", "pydata_sphinx_theme", "myst-parser", "breathe", "ablog", "sphinxcontrib.plantuml", "sphinx_design", "sphinx_favicon"]
cli = ["ipython"]
hdf5 = ["h5py"]
caenhv = ["pycaenhv>=0.03"]

[tool.meson-python.args]
setup = ["--wrap-mode=forcefallback", "-Dimpl_py=enabled", "-Dimpl_cxx=disabled"]  # disable C++ for now
dist = ["--include-subprojects"]

[tool.flake8]
max-line-length = 125
ignore = ["E203", "W503"]

[tool.coverage.run]
source = ["constellation"]

[tool.mypy]
python_version = "3.11"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
# force specific ignores:
enable_error_code = ['ignore-without-code']
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = "./python/constellation/core"
exclude = [
        "^test_",
]
