# SPDX-FileCopyrightText: 2024 DESY and the Constellation authors
# SPDX-License-Identifier: CC0-1.0

[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "ConstellationDAQ"
authors = [{name = "Constellation Authors"}]
description = "The Autonomous Control and Data Acquisition System for Dynamic Experimental Setups"
readme = "README.md"
license = {text = "EUPL-1.2"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Unix",
    "License :: OSI Approved",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pyzmq",
    "msgpack",
    "python-statemachine>=2.3.3",
    "numpy",
    "coloredlogs",
    "psutil",
]

[project.scripts]
Controller = "constellation.core.controller:main"
Monitor = "constellation.core.monitoring:main"
DemoDataSender = "constellation.core.datasender:main"
DemoHeartbeatChecker = "constellation.core.heartbeatchecker:main"
DemoHeartbeatSender = "constellation.core.heartbeater:main"
# tools
ConstellationListInterfaces = "constellation.tools.list_interfaces:main"
# 3rd-party Satellites
SatelliteCaenHV = "constellation.satellites.CaenHV.CaenHV:main"
SatelliteH5DataWriter = "constellation.satellites.H5DataWriter.H5DataWriter:main"
SatelliteInflux = "constellation.satellites.Influx.Influx:main"
SatelliteKeithley = "constellation.satellites.Keithley.Keithley:main"
SatelliteMariner = "constellation.satellites.Mariner.Mariner:main"

[project.urls]
Homepage = "https://constellation.pages.desy.de/"
Repository = "https://gitlab.desy.de/constellation/constellation"

[project.optional-dependencies]
# Dev components
dev = [
    "build",
    "black",
    "flake8", "flake8-pyproject",
    "mypy", "types-psutil",
]
test = [
    "pytest",
    "pytest-forked",
    "pytest-cov",
    "pytest-sugar",
]
docs = [
    "sphinx",
    "pydata_sphinx_theme",
    "myst-parser",
    "breathe",
    "ablog",
    "sphinxcontrib-plantuml",
    "sphinx_design",
    "sphinx-favicon",
    "sphinx-copybutton",
]
# Feature components
cli = ["ipython"]
# Satellite components
caenhv = ["pycaenhv>=0.03", "pyserial"]
hdf5 = ["h5py"]
influxdb = ["influxdb-client"]
keithley = ["pyserial"]

[tool.meson-python.args]
setup = ["--wrap-mode=forcefallback", "-Dimpl_py=enabled", "-Dimpl_cxx=disabled"]  # disable C++ for now
dist = ["--include-subprojects"]

[tool.flake8]
max-line-length = 125
ignore = ["E203", "E731", "W503"]

[tool.black]
line-length = 125

[tool.coverage.run]
source = ["constellation"]

[tool.mypy]
python_version = "3.11"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
# force specific ignores:
enable_error_code = ['ignore-without-code']
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = "./python/constellation/core"
exclude = [
    "^test_",
]
